@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2006 Apple Computer, Inc.  All rights reserved.
+ * Copyright (C) 2006, 2008 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -28,8 +28,9 @@
 
 #include "SharedTimer.h"
 #include "SystemTime.h"
-#include <math.h>
+#include <limits.h>
 #include <limits>
+#include <math.h>
 #include <wtf/HashSet.h>
 #include <wtf/Vector.h>
 
